test/src/e2e_vm_tests/test_programs/should_fail/contract_pure_calls_impure/src/main.sw
contract;

abi ImpurityTest {
    fn impure_func() -> bool;
}

impl ImpurityTest for Contract {
    fn impure_func() -> bool {
        foo();
        true
    }
}

#[storage(read, write)]
fn foo() {}
